feat: edite package com.starbank.recommendation_service.dynamic.service;
            import com.fasterxml.jackson.databind.ObjectMapper;
            import com.starbank.recommendation_service.dto.RecommendationDto;
            import com.starbank.recommendation_service.dynamic.eval.RuleEvaluator;
            import com.starbank.recommendation_service.dynamic.mapper.DynamicRuleMapper;
            import com.starbank.recommendation_service.dynamic.model.DynamicRule;
            import com.starbank.recommendation_service.dynamic.repository.DynamicRuleRepository;
            import org.springframework.stereotype.Service;
            import org.springframework.transaction.annotation.Transactional;

            import java.util.*;

            @Service
            public class DynamicRuleService {

                private final DynamicRuleRepository repository;
                private final ObjectMapper mapper = new ObjectMapper();
                private final RuleEvaluator evaluator;
                private final RuleStatsService stats;

                public DynamicRuleService(DynamicRuleRepository repository,
                                          RuleEvaluator evaluator,
                                          RuleStatsService stats) {
                    this.repository = repository;
                    this.evaluator = evaluator;
                    this.stats = stats;
                }

                @Transactional(transactionManager = "rulesTransactionManager")
                public DynamicRule create(com.starbank.recommendation_service.dto.DynamicRuleRequest dto) {
                    UUID productId = UUID.fromString(dto.getProductId());
                    String ruleJson;
                    try {
                        ruleJson = mapper.writeValueAsString(dto.getRule());
                    } catch (Exception e) {
                        throw new IllegalArgumentException("Invalid rule JSON: " + e.getMessage(), e);
                    }
            